# multipass

./: Cargo.toml  config.example.toml  flake.nix
.github/workflows/: CI.yml
docs/: README.md
src/: config.rs  discover.rs  http.rs  http_client.rs  lib.rs  main.rs  route.rs  serve.rs  svc.rs
src/html/: error.html
src/http/: box_body.rs  client.rs  error_respond.rs  header_from_target.rs
