[package]
name = "multipass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
ahash = "0.8.3"
clap = { version = "4.1.4", features = ["derive", "env"] }
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["net", "rt-multi-thread", "time", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
toml = "0.7.1"
linkerd-stack = { git = "https://github.com/linkerd/linkerd2-proxy" }
linkerd-router = { git = "https://github.com/linkerd/linkerd2-proxy" }
serde = {version = "1",features = ["derive"] }
mdns-sd = "0.5.10"
simple-mdns = { version = "0.4.0", features = ["async-tokio"] }
tower = "0.4.13"
