[package]
name = "multipass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
ahash = "0.8.3"
clap = { version = "4.3.0", features = ["derive", "env"] }
futures = "0.3.28"
http = "0.2.9"
http-body = "1.0.0-rc.2"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
hyper-util = { git = "https://github.com/programatik29/hyper-util", branch = "auto-conn", features = ["client", "auto"] }
tokio = { version = "1.25.0", features = ["net", "rt-multi-thread", "time", "sync", "signal"] }
tokio-stream = { version = "0.1.12", features = ["net"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
toml = "0.7.1"
linkerd-app-core = { git = "https://github.com/linkerd/linkerd2-proxy" }
linkerd-error-respond = { git = "https://github.com/linkerd/linkerd2-proxy" }
linkerd-stack = { git = "https://github.com/linkerd/linkerd2-proxy" }
linkerd-router = { git = "https://github.com/linkerd/linkerd2-proxy" }
serde = {version = "1",features = ["derive"] }
mdns-sd = "0.5.10"
simple-mdns = { version = "0.4.0", features = ["async-tokio"] }
tower = "0.4.13"
serde_with = "2.3.2"
regex = "1.7.3"
bytes = "1.4.0"
thiserror = "1.0.40"
pin-project = "1.0.12"
